fix logo covering text, now on displays smaller than 1200px, logo will not be fixed positioned

--- a/css/main.css
+++ b/css/main.css
@@ -241,15 +241,25 @@ nav.team {
     padding: 12px 0;
   }
 
+  .mobile {
+    display: block;
+  }
+
   .menu a {
     font-size: 80px;
+  }
+
+  header > nav a {
+    position: absolute;
   }
 }
 
 @media screen and (max-width: 480px) {
-  header > nav {
-    height: 100px;
-    padding: 15px;
+  header > nav a {
+    height: 80px;
+    padding: 1px;
+    top: 10px;
+    left: 18px;
   }
 
   #hamburger {
